fix: Trending Cards causing overflow

--- a/Entertainment web app/ClientApp/src/components/Card/Card.scss
+++ b/Entertainment web app/ClientApp/src/components/Card/Card.scss
@@ -39,10 +39,10 @@
   font: $small-body-mobile;
   margin-bottom: -0.8em;
   &__year {
-    opacity: 75%;
+    opacity: 80%;
   }
   &__category {
-    opacity: 75%;
+    opacity: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,7 +52,7 @@
     padding-right: .4em;
   }
   &__rating {
-    opacity: 75%;
+    opacity: 80%;
   }
   &__separator {
     align-self: center;
