--- a/Entertainment web app/ClientApp/src/components/Home/Trending/Trending.scss
+++ b/Entertainment web app/ClientApp/src/components/Home/Trending/Trending.scss
@@ -4,7 +4,7 @@
   @include content_container;
   
   &__content {
-    width: calc(100% + 2rem);
+    width: 100%;
     margin-left: -1rem;
     padding: 0 1rem;
     
