--- a/Entertainment web app/ClientApp/src/components/Home/Trending/TrendingCard/TrendingCard.scss
+++ b/Entertainment web app/ClientApp/src/components/Home/Trending/TrendingCard/TrendingCard.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   min-width: calc(100% - 0.5rem);
-  min-height: 7rem;
+  min-height: 8.5rem;
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 0.5rem;
